added keyboard support

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="n2"></div>
                 </div>
                 <button class="button" id="clear">AC</button>
-                <button class="button" id="back" ><img src = "backspace.svg"></button>
+                <button class="button" id="back" ><img src = "assets/backspace.svg"></button>
                 <button class="button operator" id="/">&divide</button>
                 <button class="button operator" id="*">&times</button>
                 <button class="button" id="7">7</button>
