added styling and README

--- a/index.html
+++ b/index.html
@@ -9,38 +9,43 @@
 
 </head>
 <body>
-    <div class="calculator">
-
-        <div class="wrapper">
-
-            <div class="buttons">
-                <div class="answer">
-                    <div class="n1"></div>
-                    <div class="op"></div>
-                    <div class="n2"></div>
+    <div class="container">
+        <div class="calculator">
+            <div class="wrapper">
+                <div class="buttons">
+                    <div class="answer">
+                        <div class="n1"></div>
+                        <div class="op"></div>
+                        <div class="n2"></div>
+                    </div>
+                    <button class="button" id="clear">AC</button>
+                    <button class="button" id="back" ><img src = "assets/backspace.svg"></button>
+                    <button class="button operator" id="/">&divide</button>
+                    <button class="button operator" id="*">&times</button>
+                    <button class="button" id="7">7</button>
+                    <button class="button" id="8">8</button>
+                    <button class="button" id="9">9</button>
+                    <button class="button operator" id="-">-</button>
+                    <button class="button" id="4">4</button>
+                    <button class="button" id="5">5</button>
+                    <button class="button" id="6">6</button>
+                    <button class="button operator" id="+">+</button>
+                    <button class="button" id="1">1</button>
+                    <button class="button" id="2">2</button>
+                    <button class="button" id="3">3</button>
+                    <button class="button" id="equal">=</button>
+                    <button class="button" id="0">0</button>
+                    <button class="button" id="-1">00</button>
+                    <button class="button" id="decimal">.</button>
                 </div>
-                <button class="button" id="clear">AC</button>
-                <button class="button" id="back" ><img src = "assets/backspace.svg"></button>
-                <button class="button operator" id="/">&divide</button>
-                <button class="button operator" id="*">&times</button>
-                <button class="button" id="7">7</button>
-                <button class="button" id="8">8</button>
-                <button class="button" id="9">9</button>
-                <button class="button operator" id="-">-</button>
-                <button class="button" id="4">4</button>
-                <button class="button" id="5">5</button>
-                <button class="button" id="6">6</button>
-                <button class="button operator" id="+">+</button>
-                <button class="button" id="1">1</button>
-                <button class="button" id="2">2</button>
-                <button class="button" id="3">3</button>
-                <button class="button" id="equal">=</button>
-                <button class="button" id="0">0</button>
-                <button class="button" id="-1">00</button>
-                <button class="button" id="decimal">.</button>
             </div>
         </div>
-    </div> 
+    </div>
+    <div class="footer">
+        <a class ="footer-text"href="https://github.com/JusGu/calculator" target="_blank">
+          Check out the repo on GitHub!
+        </a>
+    </div>
 </body>
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/1612d39f3e.js" crossorigin="anonymous"></script>
